css/styles.css
:root {
  --error-color: #dc3545;
  --success-color: #28a745;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: hsl(234, 29%, 20%);
}

.form-title {
  /* font-family: Roboto-Bold; */
  font-weight: 700;
  font-size: 55px;
  padding-bottom: 20px;
}

.panel {
    background-color: white;
    /* font-family: Roboto-Regular; */
    font-size: 16px;
    font-weight: 400;
    display: flex;
    height: 630px;
    padding: 10px 25px;
    width: 100%;
    max-width: 900px;
    border-radius: 30px;
}
li {
  line-height: 35px;
}

.feature-list {
  /* text-align: left; */
  padding-left: 0px;
}

#error-message {
 display: none;
}

.mb-3 {
  padding-top: 30px;
  width: 350px;
}

form {
  font-size: 14px;
}

#submitBtn {
  width: 100%;
  margin-top: 20px;
  background-color: hsl(235, 18%, 26%);
  border-color: hsl(235, 18%, 26%);
  padding: 18px 10px;
  font-size: 16px;
  font-weight: 700;
  /* font-family: Roboto-Regular; */
}

#submitBtn:hover {
  background-color: hsl(4, 100%, 67%);
  cursor: pointer;
}
.mobile-image {
  display: none;
}

 input::placeholder {
  font-weight: bold !important;
  opacity: 0.5 !important;
  color: gray !important;
}

#input-email {
  height: 50px;
  cursor: pointer;
}

#input-email.error {
  border-color: var(--error-color);
}

#input-email.success {
  border-color: var(--success-color);
}

.content-box {
    margin-top: 60px;
    padding: 20px;
}

.form-heading {
  display: flex;
  justify-content: space-between;
}

footer {
  position: fixed;
  bottom: 0;
  color: white;
  /* font-family: Roboto-Regular; */
  padding: 15px;
}

@font-face {
  font-family: Roboto-Regular;
  src: url('./assets/fonts/Roboto-Regular.ttf');
}
 
@font-face {
  font-family: Roboto-Bold;
  src: url('./assets/fonts/Roboto-Bold.ttf');
}

@media screen and (max-width: 375px) {
  html, body {
    background-color: white;
  }

  .form-title {
    font-size: 40px;
  }
  
  .panel {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
  }
  .content-box {
    padding: 0px;
  }
  .desktop-image {
    display: none;
  }

  .inner-content {
    padding: 25px 20px;
    text-align: left;
    margin-left: 10px;
  }

  ul {
    list-style-position: outside;
  }

  .mobile-image {
    display: block;
    width: 0px;
  }

  footer {
    display: none;
  }

 
}

